[package]
name = "merged_lands"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"

[dependencies]
# <uncategorized>
clap = "3.2.16"
argfile = "0.1.4"
wild = "2.0.4"
shadow-rs = "0.16.1"

# Serialization for meta files to fine tune merge on each plugin.
serde = { version = "1.0.139", features = ["derive"] }
toml = "0.5.9"

# Support for bitfields.
bitflags = "1.3.2"

# Utilities.
itertools = "0.10.3" # collect_vec, sorted_by, sorted_by_key
mimalloc = { version = "0.1.29", default-features = false }
const-default = { version = "1.0", features = ["derive"] }

# Faster performance.
hashbrown = "0.12.3"

# For formatted date time in the generated ESP description.
time = { version = "0.3.12", features = ["formatting"] }

# Error messages, logging, colored output.
simplelog = "0.12.0"
log = "0.4.17"
anyhow = "1.0.58"
owo-colors =  "3.4.0"

# Used when parsing the Morrowind.ini file.
regex = "1.6.0"

# Needed for cross-platform file operations.
filesize = "0.2.0"  # For byte size used in ESP dependencies.
filetime = "0.2.17" # For last modified time used in sorting.

# For producing images of terrain.
image = "0.24.3"

# Parsing and writing ESPs.
[dependencies.tes3]
#path = "../tes3"
git = "https://github.com/Greatness7/tes3"
default-features = false
features = ["esp"]